<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp">

        <TextView
            android:id="@+id/headerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/welcome_to_app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/discover_amazing_thing_near_around_you"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#7974E6"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/subTitleTextView"
            app:layout_constraintStart_toStartOf="@+id/subTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/subTitleTextView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/signInButton"
            app:layout_constraintStart_toStartOf="@+id/signInButton"
            app:layout_constraintTop_toBottomOf="@+id/signInButton" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="24dp"
            android:background="#DDD5D5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="14dp"
            android:text="@string/or_connect_using"
            app:layout_constraintBottom_toBottomOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <ImageButton
                android:id="@+id/phoneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bkg_round_icon"
                android:backgroundTint="#FF9800"
                android:padding="4dp"
                android:src="@drawable/ic_navigation_button" />

            <ImageButton
                android:id="@+id/googleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bkg_round_icon"
                android:backgroundTint="#EC1A2C"
                android:padding="4dp"
                android:src="@drawable/ic_navigation_button" />

            <ImageButton
                android:id="@+id/twitterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bkg_round_icon"
                android:backgroundTint="#11DFF1"
                android:padding="4dp"
                android:src="@drawable/ic_navigation_button" />

            <ImageButton
                android:id="@+id/facebookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bkg_round_icon"
                android:backgroundTint="#0661AA"
                android:padding="4dp"
                android:src="@drawable/ic_navigation_button" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>